<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/tracking_protection_ex" android:checkable="true"
        android:id="@+id/action_tpe" app:showAsAction="never" />
    <item android:title="@string/desktop_mode" android:id="@+id/desktop_mode" android:checkable="true"
          app:showAsAction="never" />
    <item android:title="@string/collapse" android:id="@+id/collapse" android:checkable="true"
        app:showAsAction="never" />
    <item android:title="@string/private_browsing" android:checkable="true" android:id="@+id/action_pb"/>
    <item android:title="@string/new_tab" android:id="@+id/action_new_tab"/>
    <item android:title="@string/install_addon" android:id="@+id/install_addon"/>
    <item android:title="@string/update_addon" android:id="@+id/update_addon"/>
    <item android:title="@string/close_tab" android:id="@+id/action_close_tab"/>
    <item android:title="@string/forward" android:id="@+id/action_forward"/>
    <item android:title="@string/reload" android:id="@+id/action_reload"/>
    <item android:title="@string/save_pdf" android:id="@+id/save_pdf"/>
    <item android:title="@string/print_page" android:id="@+id/print_page"/>
    <item android:title="Request Shopping Analysis" android:id="@+id/request_shopping_analysis"/>
    <item android:title="Get Shopping Recommendations" android:id="@+id/request_shopping_recommendations"/>
    <item android:title="Create Shopping Analysis" android:id="@+id/create_shopping_analysis"/>
    <item android:title="Get Shopping Analysis Status" android:id="@+id/get_shopping_analysis_status"/>
    <item android:title="Poll Until Analysis Completed" android:id="@+id/poll_shopping_analysis_status"/>
    <item android:title="@string/translate" android:id="@+id/translate"/>
    <item android:title="@string/translate_restore" android:id="@+id/translate_restore"/>
    <item android:title="@string/translate_manage" android:id="@+id/translate_manage"/>
    <item android:title="@string/settings" android:id="@+id/settings" app:showAsAction="never" />
</menu>
